# feedback

4LevelBiexciton/Biexciton_without_Feedback/: Makefile  biexciton.cc  biexciton.h  calculate_average_current_DTC.py  main.cc  parameters.cfg  vonneumannentropy
DTC/DTC_Dateien/: parameters_master  parameters_master_zum_probieren  script_full.sh
DTC/new_prog/: parameters_master  parameters_master_new
Feedback/Programm_fuer_Kisa/: feedback.cc  feedback.h  parameters.cfg
Feedback/TLS_Feedback/: feedback.cc  feedback.h  main.cc  makeit  parameters.cfg
Feedback/TLS_Feedback_long_MPS/: Makefile  a.out  feedback.cc  parameters.cfg
Feedback/TLS_Feedback_long_MPS_contract/: a.out  feedback.cc  feedback.h  main.cc  main_laplace.c  parameters.cfg
Feedback/TLS_Liouville/: TLS_Liouville.cc  TLS_Liouville.h  main.cc  parameters.cfg
Feedback/TLS_Liouville_mit_Lindblad/: TLS_Liouville.cc  TLS_Liouville.h  main.cc  parameters.cfg
Feedback/TLS_Liouville_mit_Lindblad_und_Feedback/: TLS_Liouville.cc  TLS_Liouville.h  job324198.0.out  job324199.0.out  job324200.0.out  main.cc  parameters.cfg
Feedback/TLS_RK4_KSummen/: main_g1_full_k_original_clean.c
Feedback/TLS_als_Benchmark/: Makefile  TLS_se.cc  a.out  main_laplace.c  options.mk  parameters.cfg
Feedback_Liouville/Feedback_Liouvillespace/: Makefile  TLS_Liouville.cc  TLS_Liouville.h  a.out  benchmark_lindblads.py  main.cc  parameters_liouville.cfg  tls_benchmark.c
Feedback_Liouville/Spinbasis_Liouvillespace/: main.cc  (+3 more)
Skripte/: CMakeLists.txt  calculate_average_current.py  makeit_uni  plot.py  plot_something.py
(+121 files in other folders)
